<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Urban Arts</string>
    <string name="map_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDNdJjyANsnAKaEHZN-1GSNyKq8Tun2vVE</string>
    <string name="hide_stores">
          [
            {
              \"featureType\": \"poi.business\",
              \"elementType\": \"all\",
              \"stylers\": [
                {
                  \"visibility\": \"off\"
                }
              ]
            },
            {
              \"featureType\": \"poi\",
              \"elementType\": \"all\",
              \"stylers\": [
                {
                  \"visibility\": \"off\"
                }
              ]
            },
            {
              \"featureType\": \"transit\",
              \"elementType\": \"labels.icon\",
              \"stylers\": [
                {
                  \"visibility\": \"off\"
                }
              ]
            }
          ]
    </string>
    <string name="log_in">Log In</string>
    <string name="filters">Filters</string>
    <string name="live_feed">Live Feed</string>
    <string name="favorites">Favorites</string>
    <string name="register">Register</string>
    <string name="i_accept_the_terms_of_service">I accept the Terms of Service</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_log_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_email">Username/Email</string>
    <string name="keep_in_touch_with_anything_happening_around_you">Keep in touch with anything happening around you!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="send">Send</string>
    <string name="misinformation">Misinformation</string>
    <string name="inappropriate_username">Inappropriate Username</string>
    <string name="hate_speech">Hate Speech</string>
    <string name="spam">Spam</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="report_user">Report User</string>
    <string name="report_event">Report Event</string>
    <string name="in_order_to_help_us_understand_the_reason_you_are_reporting_this_user_tick_one_of_those_mentioned_below_contact_information_is_required_in_case_we_need_further_information_regarding_this_report_if_you_feel_the_need_to_include_any_additional_information_please_fill_in_the_text_box_below">In order to help us understand the reason you are reporting this user, tick one of those mentioned below. Contact information is required, in case we need further information regarding this report. If you feel the need to include any additional information, please fill in the text box below.</string>
    <string name="in_order_to_help_us_understand_the_reason_you_are_reporting_this_event_tick_one_of_those_mentioned_below_contact_information_is_required_in_case_we_need_further_information_regarding_this_report_if_you_feel_the_need_to_include_any_additional_information_please_fill_in_the_text_box_below">In order to help us understand the reason you are reporting this event, tick one of those mentioned below. Contact information is required, in case we need further information regarding this report. If you feel the need to include any additional information, please fill in the text box below.</string>
    <string name="copyright_issues">Copyright Issues</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="inappropriate_input">Inappropriate Input</string>
    <string name="event_map">Event Map</string>
    <string name="create_post">Create Post</string>
    <string name="following">Following</string>
    <string name="event_feed">Event Feed</string>
    <string name="explore_artists">Explore Artists</string>
    <string name="explore_events">Explore Events</string>
    <string name="urban_arts">Urban Arts</string>
    <string name="artist_name">Artist Name</string>
    <string name="address">Address</string>
    <string name="genre">Genre</string>
</resources>
